--- a/package.json
+++ b/package.json
@@ -1,43 +1,57 @@
 {
-  "name": "adventofcode-typescript-starter",
-  "version": "1.0.0",
-  "description": "https://adventofcode.com/",
-  "main": "src/index.ts",
-  "scripts": {
-    "build": "rimraf ./build && tsc",
-    "test": "jest",
-    "setup": "node src/setup.js",
-    "start": "npm run build && node build/index.js"
-  },
-  "author": "Loris Bognanni",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/jest": "^27.0.3",
-    "@types/node": "^16.11.10",
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-jest": "^24.7.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.1",
-    "jest": "^26.6.3",
-    "rimraf": "^3.0.2",
-    "ts-jest": "^26.5.6",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.2"
-  },
-  "jest": {
-    "transform": {
-      "^.+\\.ts?$": "ts-jest"
+    "name": "adventofcode-typescript-starter",
+    "version": "1.0.0",
+    "description": "https://adventofcode.com/",
+    "main": "src/index.ts",
+    "scripts": {
+        "build": "rimraf ./build && tsc",
+        "test": "jest",
+        "setup": "node src/setup.js",
+        "start": "npm run build && node build/index.js",
+        "prepare": "husky install"
     },
-    "testEnvironment": "node",
-    "testRegex": "./src/.*\\.(test|spec)?\\.(ts|ts)$",
-    "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json", "node"],
-    "roots": [
-      "<rootDir>/src"
-    ]
-  }
+    "author": "Loris Bognanni",
+    "license": "ISC",
+    "devDependencies": {
+        "@types/jest": "^27.0.3",
+        "@types/node": "^16.11.10",
+        "@typescript-eslint/eslint-plugin": "^5.4.0",
+        "@typescript-eslint/parser": "^5.4.0",
+        "eslint": "^7.32.0",
+        "eslint-config-airbnb-base": "^15.0.0",
+        "eslint-config-standard": "^16.0.3",
+        "eslint-plugin-import": "^2.25.3",
+        "eslint-plugin-jest": "^24.7.0",
+        "eslint-plugin-node": "^11.1.0",
+        "eslint-plugin-promise": "^5.1.1",
+        "husky": "^8.0.3",
+        "jest": "^26.6.3",
+        "lint-staged": "^15.1.0",
+        "prettier": "^3.1.0",
+        "rimraf": "^3.0.2",
+        "ts-jest": "^26.5.6",
+        "ts-node": "^10.4.0",
+        "typescript": "^4.5.2"
+    },
+    "lint-staged": {
+        "**/*": "prettier --write --ignore-unknown"
+    },
+    "jest": {
+        "transform": {
+            "^.+\\.ts?$": "ts-jest"
+        },
+        "testEnvironment": "node",
+        "testRegex": "./src/.*\\.(test|spec)?\\.(ts|ts)$",
+        "moduleFileExtensions": [
+            "ts",
+            "tsx",
+            "js",
+            "jsx",
+            "json",
+            "node"
+        ],
+        "roots": [
+            "<rootDir>/src"
+        ]
+    }
 }
